// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generating inline messages summary inline result matches snapshot 1`] = `
"
[//]: # (danger-id-blankID;)
[//]: # (  File: File.swift;Line: 5;)
- :x: Failing message Failing message
- :warning: Warning message Warning message
- :sparkles: message
markdown
  "
`;

exports[`generating messages for BitBucket cloud Mixed icon messages match snapshot 1`] = `
"
  :tada:  All green. Well done.

  
  
  

  |      3 Messages |
  | --- |
  | 📝 - Message with custom icon |
  | 🔔 - Message with custom icon2 |
  | :sparkles: - Test message |

  
  
  
  
  

  Generated by 🚫 [dangerJS](https://danger.systems/js) against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
  
  
  [](http://danger-id-blankID;)
  "
`;

exports[`generating messages for BitBucket cloud empty result matches snapshot, with a compliment 1`] = `
"
  :tada:  All green. Well done.

  
  
  
  
  
  
  

  Generated by 🚫 [dangerJS](https://danger.systems/js) against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
  
  
  [](http://danger-id-blankID;)
  "
`;

exports[`generating messages for BitBucket cloud multiple summary result matches snapshot 1`] = `
"
  :warning:  Danger found some issues. Don't worry, everything is fixable.

  

  |      2 Fails |
  | --- |
  | :x: - Failing message Failing message |
  | :x: - Failing message 2, This is Failing message |

  
  

  |      2 Warnings |
  | --- |
  | :warning: - Warning message Warning message |
  | :warning: - Warning message |

  
  

  |      3 Messages |
  | --- |
  | :sparkles: - message |
  | :sparkles: - message 2 |
  | :sparkles: - message 3 |

  
  
  markdown
  
  

  Generated by 🚫 [dangerJS](https://danger.systems/js) against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
  
  
  [](http://danger-id-blankID;)
  "
`;

exports[`generating messages for BitBucket cloud summary result matches snapshot, with a commit 1`] = `
"
  :warning:  Danger found some issues. Don't worry, everything is fixable.

  

  |      1 Fails |
  | --- |
  | :x: - Failing message Failing message |

  
  

  |      1 Warnings |
  | --- |
  | :warning: - Warning message Warning message |

  
  

  |      1 Messages |
  | --- |
  | :sparkles: - message |

  
  
  markdown
  
  

  Generated by 🚫 [dangerJS](https://danger.systems/js) against e70f3d6468f61a4bef68c9e6eaba9166b096e23c
  
  
  [](http://danger-id-blankID;)
  "
`;

exports[`generating messages for BitBucket cloud summary result matches snapshot, without a commit 1`] = `
"
  :warning:  Danger found some issues. Don't worry, everything is fixable.

  

  |      1 Fails |
  | --- |
  | :x: - Failing message Failing message |

  
  

  |      1 Warnings |
  | --- |
  | :warning: - Warning message Warning message |

  
  

  |      1 Messages |
  | --- |
  | :sparkles: - message |

  
  
  markdown
  
  

  Generated by 🚫 [dangerJS](https://danger.systems/js)
  
  
  [](http://danger-id-blankID;)
  "
`;
